--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        .top-box {
+            width:100%;
+            height:500px;
+        }
+        .login-box{
+            padding: 20px;
+            width:100%;
+            height: 20px;
+            background: aquamarine;
+        }
+        .login-box-inner{
+            width: 200px;
+            margin-top: 10px;
+            background: aliceblue;
+            float: right;
+        }
+        .login-inner{
+            display: inline-block;
+            margin-right: 20px;
+        }
+        .banner-box{
+            width: 100%;
+            height: 400px;
+            background: bisque;
+        }
+        .banner-inner{
+            width: 100%;
+            height: 100%;
+            background-image: url('https://www.jeongdong.or.kr/static/portal/img/HKPU_04_04_pic1.jpg');
+            background-size: cover;
+            background-repeat: no-repeat;
+        }
+    </style>
 </head>
 <body>
+    <div class="top-box">
+        <div class="login-box">
+            <div class="login-box-inner">
+                <div class="login-inner">회원가입</div>
+                <div class="login-inner">로그인</div>
+            </div>
+        </div>
+        <div class="banner-box">
+            <div class="banner-inner"></div>
+        </div>
+    </div>
 
+    <div>
+
+    </div>
 </body>
 </html>
