--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
     <title>Title</title>
     <style>
         .top-box {
@@ -12,29 +18,69 @@
             padding: 20px;
             width:100%;
             height: 20px;
-            background: aquamarine;
         }
         .login-box-inner{
             width: 200px;
             margin-top: 10px;
-            background: aliceblue;
             float: right;
         }
         .login-inner{
             display: inline-block;
             margin-right: 20px;
+            font-size: 20px;
         }
         .banner-box{
             width: 100%;
             height: 400px;
             background: bisque;
+            margin-top: 30px;
         }
         .banner-inner{
             width: 100%;
             height: 100%;
-            background-image: url('https://www.jeongdong.or.kr/static/portal/img/HKPU_04_04_pic1.jpg');
+            background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.3)), url('https://www.jeongdong.or.kr/static/portal/img/HKPU_04_04_pic1.jpg');
             background-size: cover;
             background-repeat: no-repeat;
+        }
+        .banner-write{
+            margin: 0 auto;
+            width: 200px;
+            height: 30px;
+            padding-top: 150px;
+        }
+        .banner-word{
+            color: white;
+            font-size: 30px;
+        }
+        .update-box{
+            width: 100%;
+            height: 50px;
+            background-color: aquamarine;
+        }
+        .update-inner{
+            float: right;
+            width: 200px;
+            height: 100%;
+            background-color: antiquewhite;
+        }
+        .update-word{
+            text-align: center;
+            font-size: 20px;
+        }
+
+        .bottom-box{
+            width: 100%;
+            height: 800px;
+            background-color: aliceblue;
+        }
+        .bottom-box-inner{
+            width: 100%;
+            height: 100%;
+            display: inline-block;
+            padding: 30px;
+        }
+        .card{
+            margin-left: 10px;
         }
     </style>
 </head>
@@ -42,17 +88,81 @@
     <div class="top-box">
         <div class="login-box">
             <div class="login-box-inner">
-                <div class="login-inner">회원가입</div>
+                <div class="login-inner"><a href="/register">회원가입</a></div>
                 <div class="login-inner">로그인</div>
             </div>
         </div>
         <div class="banner-box">
-            <div class="banner-inner"></div>
+            <div class="banner-inner">
+                <div class="banner-write"><p class="banner-word">카페 추천합니다</p></div>
+            </div>
         </div>
     </div>
+    <div class="update-box">
+        <div class="update-inner">
+            <button class="update-word">카페 등록하기</button>
+        </div>
+    </div>
+    <div class="bottom-box">
+        <div class="bottom-box-inner">
+            <div class="row row-cols-1 row-cols-md-4 g-1" id="cards-box">
+                <div class="card">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTIaX2DUOsz8ZnsMiGZw8h8RyuUbCelNiJvWMTyOGaMjYrupt9Kq8fxtwm_iXcvTdSoURo&usqp=CAU"
+                         class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h4 class="card-text">{{ name }}</h4>
+                        <p class="card-text">경기도 성남시 분당구 어디</p>
+                        <p class="card-text">여기 분위기 개좋음</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTIaX2DUOsz8ZnsMiGZw8h8RyuUbCelNiJvWMTyOGaMjYrupt9Kq8fxtwm_iXcvTdSoURo&usqp=CAU"
+                         class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h4 class="card-text">카페이름</h4>
+                        <p class="card-text">경기도 성남시 분당구 어디</p>
+                        <p class="card-text">여기 분위기 개좋음</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTIaX2DUOsz8ZnsMiGZw8h8RyuUbCelNiJvWMTyOGaMjYrupt9Kq8fxtwm_iXcvTdSoURo&usqp=CAU"
+                         class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h4 class="card-text">카페이름</h4>
+                        <p class="card-text">경기도 성남시 분당구 어디</p>
+                        <p class="card-text">여기 분위기 개좋음</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTIaX2DUOsz8ZnsMiGZw8h8RyuUbCelNiJvWMTyOGaMjYrupt9Kq8fxtwm_iXcvTdSoURo&usqp=CAU"
+                         class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h4 class="card-text">카페이름</h4>
+                        <p class="card-text">경기도 성남시 분당구 어디</p>
+                        <p class="card-text">여기 분위기 개좋음</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTIaX2DUOsz8ZnsMiGZw8h8RyuUbCelNiJvWMTyOGaMjYrupt9Kq8fxtwm_iXcvTdSoURo&usqp=CAU"
+                         class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h4 class="card-text">카페이름</h4>
+                        <p class="card-text">경기도 성남시 분당구 어디</p>
+                        <p class="card-text">여기 분위기 개좋음</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTIaX2DUOsz8ZnsMiGZw8h8RyuUbCelNiJvWMTyOGaMjYrupt9Kq8fxtwm_iXcvTdSoURo&usqp=CAU"
+                         class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h4 class="card-text">카페이름</h4>
+                        <p class="card-text">경기도 성남시 분당구 어디</p>
+                        <p class="card-text">여기 분위기 개좋음</p>
+                    </div>
+                </div>
 
-    <div>
-
+            </div>
+        </div>
     </div>
 </body>
 </html>
