--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,67 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
+
     <title>Title</title>
+    <script>
+        $(document).ready(function () {
+            listing();
+        });
+
+        function listing() {
+            $.ajax({
+                type: "GET",
+                url: "/caffe",
+                data: {},
+                success: function (response) {
+                    let rows = response['Seoul']
+                    for (let  i = 0; i < rows.length; i++) {
+                        let name = rows[i]['name']
+                        let score = rows[i]['score']
+                        let add = rows[i]['add']
+                        let comment = rows[i]['comment']
+                        let img = rows[i]['img']
+
+                        let temp_html = `<div class="card">
+                                            <img src=${img}
+                                                 class="card-img-top" alt="...">
+                                            <div class="card-body">
+                                                <h4 class="card-text">${name}</h4>
+                                                <p class="card-text">${add}</p>
+                                                <p class="card-text">${comment}</p>
+                                            </div>
+                                           </div>`
+                        $('#cards-box').append(temp_html)
+                    }
+                }
+            })
+
+        }
+        $(document).ready(function () {
+            lasting();
+        });
+
+        function lasting() {
+            $.ajax({
+                type: "GET",
+                url: "/Gyeonggi",
+                data: {},
+                success: function (response) {
+
+                    let rows = response['Seoul']
+                    for (let i = 0; i < rows.length; i++) {
+                        let name = rows[i]['name']
+                        let score = rows[i]['score']
+                        let add = rows[i]['add']
+                        let comment = rows[i]['comment']
+                        let img = rows[i]['img']
+                    }
+                }
+            })
+        }
+
+    </script>
+
     <style>
         .top-box {
             width:100%;
