--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,56 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
+
     <title>Title</title>
+    <script>
+        $(document).ready(function () {
+            listing();
+        });
+
+        function listing() {
+            $.ajax({
+                type: "GET",
+                url: "/caffe",
+                data: {},
+                success: function (response) {
+                    let rows = response['Seoul']
+                    for (let  i = 0; i < rows.length; i++) {
+                        let name = rows[i]['name']
+                        let score = rews[i]['score']
+                        let add = rows[i]['add']
+                        let comment = rows[i]['comment']
+
+                        let temp_html = ``
+                    }
+                }
+            })
+
+        }
+        $(document).ready(function () {
+            lasting();
+        });
+
+        function lasting() {
+            $.ajax({
+                type: "GET",
+                url: "/Gyeonggi",
+                data: {},
+                success: function (response) {
+                     success: function (response) {
+                    let rows = response['Seoul']
+                    for (let  i = 0; i < rows.length; i++) {
+                        let name = rows[i]['name']
+                        let score = rews[i]['score']
+                        let add = rows[i]['add']
+                        let comment = rows[i]['comment']
+                }
+            })
+
+        }
+
+    </script>
+
     <style>
         .top-box {
             width:100%;
