--- a/templates/register.html
+++ b/templates/register.html
@@ -2,9 +2,78 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
     <title>Title</title>
+    <style>
+        body{
+            background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.3)), url("https://www.jeongdong.or.kr/static/portal/img/HKPU_04_04_pic1.jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
+            height: 1080px;
+        }
+        .main-box{
+            width: 100%;
+            height: 100%;
+        }
+        .main-box-inner{
+            width: 400px;
+            height: 500px;
+            background-color: #eee;
+            margin: 0 auto;
+            margin-top: 100px;
+            padding: 10px;
+            border-radius: 30px;
+        }
+        .register-box{
+            width: 100%;
+            height: 100%;
+            text-align: center;
+        }
+        .id-box{
+            width: 100%;
+            height: 100px;
+        }
+        .pw-box{
+           width: 100%;
+            height: 100px;
+        }
+        .ok-box{
+            float: right;
+            margin-top: 150px;
+        }
+        input{
+            border-radius: 10px;
+            border: none;
+            height: 40px;
+        }
+    </style>
 </head>
 <body>
-
+    <div class="main-box">
+        <div class="main-box-inner">
+            <div class="register-box">
+                <div class="id-box">
+                    <p>아이디</p>
+                    <input type="text" placeholder="아이디를 입력하세요">
+                </div>
+                <div class="pw-box">
+                    <p>비밀번호</p>
+                    <input type="password" placeholder="비밀번호를 입력하세요">
+                </div>
+                <div class="nick-box">
+                    <p>닉네임</p>
+                    <input type="text" placeholder="닉네임을 입력하세요">
+                </div>
+                <div class="ok-box">
+                    <button type="button" class="btn btn-outline-primary">가입하기</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
