--- a/templates/index.html
+++ b/templates/index.html
@@ -15,10 +15,10 @@
             lasting();
         });
 
-        function lasting() {
+        function save_list() {
             $.ajax({
-                type: "GET",
-                url: "/Gyeonggi",
+                type: "POST",
+                url: "/",
                 data: {},
                 success: function (response) {
 
@@ -109,9 +109,51 @@
         .card{
             margin-left: 10px;
         }
+        .modal-black{
+            width: 100%;
+            height: 100%;
+            background: rgba(0,0,0,0.5);
+            position: absolute;
+            z-index: 5;
+            display: none;
+        }
+        .modal-white{
+            width: 500px;
+            height: 500px;
+            background-color: white;
+            text-align: center;
+            margin: 0 auto;
+            margin-top: 200px;
+            border-radius: 30px;
+            padding: 20px;
+        }
+        .cafe-name{
+            width: 100%;
+            height: 80px;
+            background-color: antiquewhite;
+        }
     </style>
 </head>
 <body>
+    <div class="modal-black">
+        <div class="modal-white">
+            <div class="cafe-name">
+                <input type="text">
+            </div>
+            <div class="cafe-name">
+                <input type="text">
+            </div>
+            <div class="cafe-name">
+                <input type="text">
+            </div>
+            <div class="cafe-name">
+                <textarea></textarea>
+            </div>
+            <div class="cafe-name">
+                <button onclick="save_list()">저장하기</button>
+            </div>
+        </div>
+    </div>
     <div class="top-box">
         <div class="login-box">
             <div class="login-box-inner">
@@ -147,5 +189,18 @@
             </div>
         </div>
     </div>
+<script>
+    let update = document.querySelector('.update-word')
+    let modal = document.querySelector('.modal-black')
+    update.addEventListener('click',function(){
+        modal.style.display = 'block'
+    })
+    modal.addEventListener('click',function(e){
+        if(e.target === e.currentTarget){
+            modal.style.display = 'none'
+        }
+    })
+
+</script>
 </body>
 </html>
