--- a/templates/index.html
+++ b/templates/index.html
@@ -19,32 +19,34 @@
             let name = $('#cafe-name').val()
             let address = $('#address').val()
             let comment = $('#comment').val()
+            let url = $('#url').val()
             $.ajax({
                 type: "POST",
-                url: "/",
-                data: {name_give : name, address_give : address, comment_give : comment},
+                url: "/Gyeonggi",
+                data: {name_give : name, address_give : address, comment_give : comment, url_give : url},
                 success: function (response) {
-                    console.log(response)
-                    let rows = response['Gyeonggi']
-                    for (let i = 0; i < rows.length; i++) {
-                        let name = rows[i]['name']
-                        let score = rows[i]['score']
-                        let add = rows[i]['add']
-                        let comment = rows[i]['comment']
-                        let img = rows[i]['img']
+                    alert(response)
+                    window.location.reload()
+                    //let rows = response['Gyeonggi']
+                    //for (let i = 0; i < rows.length; i++) {
+                    //    let name = rows[i]['name']
+                    //    let score = rows[i]['score']
+                    //    let add = rows[i]['add']
+                    //    let comment = rows[i]['comment']
+                    //    let img = rows[i]['img']
 
-                        let temp_html = `<div class="card">
-                                            <img src=${img}
-                                                 class="card-img-top" alt="...">
-                                            <div class="card-body">
-                                                <h4 class="card-text">${name}</h4>
-                                                <p class="card-text">${add}</p>
-                                                <p class="card-text">${comment}</p>
-                                            </div>
-                                           </div>`
-                        $('#cards-box').append(temp_html)
+                    //    let temp_html = `<div class="card">
+                    //                        <img src=${img}
+                    //                             class="card-img-top" alt="...">
+                    //                        <div class="card-body">
+                    //                            <h4 class="card-text">${name}</h4>
+                    //                            <p class="card-text">${add}</p>
+                    //                            <p class="card-text">${comment}</p>
+                    //                        </div>
+                     //                      </div>`
+                      //  $('#cards-box').append(temp_html)
 
-                    }
+                   // }
                 }
             })
         }
@@ -70,6 +72,7 @@
             display: inline-block;
             margin-right: 20px;
             font-size: 20px;
+            color: black;
         }
         .banner-box{
             width: 100%;
@@ -97,22 +100,22 @@
         .update-box{
             width: 100%;
             height: 50px;
-            background-color: aquamarine;
         }
         .update-inner{
             float: right;
             width: 200px;
             height: 100%;
-            background-color: antiquewhite;
         }
-        .update-word{
+        .update-btn{
             text-align: center;
             font-size: 20px;
+            border: none;
+            border-radius: 10px;
         }
 
         .bottom-box{
             width: 100%;
-            height: 800px;
+            height: 1000px;
             background-color: aliceblue;
         }
         .bottom-box-inner{
@@ -120,6 +123,7 @@
             height: 100%;
             display: inline-block;
             padding: 30px;
+            padding-left: 200px;
         }
         .card{
             margin-left: 10px;
@@ -134,18 +138,22 @@
         }
         .modal-white{
             width: 500px;
-            height: 500px;
-            background-color: white;
+            height: 550px;
+            background-color: thistle;
             text-align: center;
             margin: 0 auto;
             margin-top: 200px;
             border-radius: 30px;
             padding: 20px;
         }
+        .modal-white-inner{
+            width: 100%;
+            height: 100%;
+            background:thistle;
+        }
         .cafe-name{
             width: 100%;
             height: 80px;
-            background-color: antiquewhite;
         }
         .modal-name{
             margin-left: -220px;
@@ -161,6 +169,7 @@
 <body>
     <div class="modal-black">
         <div class="modal-white">
+            <div class="modal-white-inner">
             <div class="cafe-name">
                 <p class="modal-name">카페이름</p>
                 <input type="text" class="modal-input" id="cafe-name">
@@ -170,18 +179,23 @@
                 <input type="text" class="modal-input" id="address">
             </div>
             <div class="cafe-name">
+                <p class="modal-name">사진 URL</p>
+                <input type="text" class="modal-input" id="url">
+            </div>
+            <div class="cafe-name">
                 <p class="modal-name">코멘트</p>
                 <textarea id="comment" style="border: none; resize: none; width: 300px; height: 150px; border-radius: 10px"></textarea>
             </div>
             <div class="cafe-name">
-                <button style="margin-top: 120px" onclick="save_list()">저장하기</button>
+                <button style="margin-top: 120px; border: none; border-radius: 10px" onclick="save_list()">저장하기</button>
+            </div>
             </div>
         </div>
     </div>
     <div class="top-box">
         <div class="login-box">
             <div class="login-box-inner">
-                <div class="login-inner"><a href="/register">회원가입</a></div>
+                <div class="login-inner"><a href="/register" style="text-decoration: none">회원가입</a></div>
                 <div class="login-inner">로그인</div>
             </div>
         </div>
@@ -193,7 +207,7 @@
     </div>
     <div class="update-box">
         <div class="update-inner">
-            <button class="update-word">카페 등록하기</button>
+            <button class="update-btn">카페 등록하기</button>
         </div>
     </div>
     <div class="bottom-box">
@@ -214,7 +228,7 @@
         </div>
     </div>
 <script>
-    let update = document.querySelector('.update-word')
+    let update = document.querySelector('.update-btn')
     let modal = document.querySelector('.modal-black')
     update.addEventListener('click',function(){
         modal.style.display = 'block'
