--- a/templates/index.html
+++ b/templates/index.html
@@ -130,7 +130,7 @@
         }
         .modal-black{
             width: 100%;
-            height: 100%;
+            height: 1580px;
             background: rgba(0,0,0,0.5);
             position: absolute;
             z-index: 5;
