login register 추가

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     <title>Title</title>
     <script>
         $(document).ready(function () {
-            lasting();
+
         });
 
         function save_list() {
@@ -196,7 +196,7 @@
         <div class="login-box">
             <div class="login-box-inner">
                 <div class="login-inner"><a href="/register" style="text-decoration: none">회원가입</a></div>
-                <div class="login-inner">로그인</div>
+                <div class="login-inner"><a href="/login">로그인</a></div>
             </div>
         </div>
         <div class="banner-box">
@@ -238,6 +238,8 @@
             modal.style.display = 'none'
         }
     })
+
+
 
 </script>
 </body>
