--- a/templates/register.html
+++ b/templates/register.html
@@ -42,14 +42,27 @@
            width: 100%;
             height: 100px;
         }
+        .nick-box{
+            width: 100%;
+            height: 100px;
+        }
         .ok-box{
             float: right;
-            margin-top: 150px;
+            margin-top: 120px;
         }
         input{
             border-radius: 10px;
             border: none;
             height: 40px;
+        }
+        .is-danger{
+            color:red;
+        }
+        .is-safe{
+            color:green;
+        }
+        .is-success{
+            color:blue;
         }
     </style>
 </head>
@@ -59,21 +72,148 @@
             <div class="register-box">
                 <div class="id-box">
                     <p>아이디</p>
-                    <input type="text" placeholder="아이디를 입력하세요">
+                    <input type="text" placeholder="아이디를 입력하세요" id="id-box">
+                    <button onclick="check_dup()">중복확인</button>
+                    <p id="help-id"></p>
                 </div>
                 <div class="pw-box">
                     <p>비밀번호</p>
-                    <input type="password" placeholder="비밀번호를 입력하세요">
+                    <input type="password" placeholder="비밀번호를 입력하세요" id="pw-box">
+                    <p id="help-password"></p>
+                </div>
+                <div class="pw-box">
+                    <p>비밀번호확인</p>
+                    <input type="password" placeholder="비밀번호를 입력하세요" id="pw-box2">
+                    <p id="help-password2"></p>
                 </div>
                 <div class="nick-box">
                     <p>닉네임</p>
-                    <input type="text" placeholder="닉네임을 입력하세요">
+                    <input type="text" placeholder="닉네임을 입력하세요" id="nick-box">
                 </div>
                 <div class="ok-box">
-                    <button type="button" class="btn btn-outline-primary">가입하기</button>
+                    <button onclick="sign_up()" type="button" class="btn btn-outline-primary">가입하기</button>
                 </div>
             </div>
         </div>
     </div>
+<script>
+    function register() {
+            $.ajax({
+                type: "POST",
+                url: "/api/register",
+                data: {
+                    id_give: $('#id-box').val(),
+                    pw_give: $('#pw-box').val(),
+                    nickname_give: $('#nick-box').val()
+                },
+                success: function (response) {
+                    console.log(response)
+                    if (response['result'] == 'success') {
+                        alert('회원가입이 완료되었습니다.')
+                        window.location.href = '/'
+                    } else {
+                        alert(response['msg'])
+                    }
+                }
+            })
+        }
+        function is_nickname(asValue) {  <!-- 아이디 검사 -->
+            var regExp = /^(?=.*[a-zA-Z])[-a-zA-Z0-9_.]{2,10}$/;
+            return regExp.test(asValue);
+        }
+
+        function is_password(asValue) {  <!-- 비번 검사 -->
+            var regExp = /^(?=.*\d)(?=.*[a-zA-Z])[0-9a-zA-Z!@#$%^&*]{8,20}$/;
+            return regExp.test(asValue);
+        }
+
+    function check_dup() {
+        let username = $("#id-box").val()
+        console.log(username)
+        if (username == "") {
+            $("#help-id").text("아이디를 입력해주세요.").removeClass("is-safe").addClass("is-danger")
+            $("#id-box").focus()
+            return;
+        }
+        if (!is_nickname(username)) {
+            $("#help-id").text("아이디의 형식을 확인해주세요. 영문과 숫자, 일부 특수문자(._-) 사용 가능. 2-10자 길이").removeClass("is-safe").addClass("is-danger")
+            $("#id-box").focus()
+            return;
+        }
+        $("#help-id").addClass("is-loading")
+        $.ajax({
+            type: "POST",
+            url: "/sign_up/check_dup",
+            data: {
+                username_give: username
+            },
+            success: function (response) {
+                console.log(response)
+                if (response["exists"]) {
+                    $("#help-id").text("이미 존재하는 아이디입니다.").removeClass("is-safe").addClass("is-danger")
+                    $("#id-box").focus()
+                } else {
+                    $("#help-id").text("사용할 수 있는 아이디입니다.").removeClass("is-danger").addClass("is-success")
+                }
+                $("#help-id").removeClass("is-loading")
+
+            }
+        });
+    }
+
+    function sign_up() {
+        let username = $("#id-box").val()
+        let password = $("#pw-box").val()
+        let password2 = $("#pw-box2").val()
+        let nick = $('#nick-box').val()
+        console.log(username, password, password2)
+
+        if ($("#help-id").hasClass("is-danger")) {
+            alert("아이디를 다시 확인해주세요.")
+            return;
+        } else if (!$("#help-id").hasClass("is-success")) {
+            alert("아이디 중복확인을 해주세요.")
+            return;
+        }
+
+        if (password == "") {
+            $("#help-password").text("비밀번호를 입력해주세요.").removeClass("is-safe").addClass("is-danger")
+            $("#pw-box").focus()
+            return;
+        } else if (!is_password(password)) {
+            $("#help-password").text("비밀번호의 형식을 확인해주세요. 영문과 숫자 필수 포함, 특수문자(!@#$%^&*) 사용가능 8-20자").removeClass("is-safe").addClass("is-danger")
+            $("#pw-box").focus()
+            return
+        } else {
+            $("#help-password").text("사용할 수 있는 비밀번호입니다.").removeClass("is-danger").addClass("is-success")
+        }
+        if (password2 == "") {
+            $("#help-password2").text("비밀번호를 입력해주세요.").removeClass("is-safe").addClass("is-danger")
+            $("#pw-box2").focus()
+            return;
+        } else if (password2 != password) {
+            $("#help-password2").text("비밀번호가 일치하지 않습니다.").removeClass("is-safe").addClass("is-danger")
+            $("#pw-box2").focus()
+            return;
+        } else {
+            $("#help-password2").text("비밀번호가 일치합니다.").removeClass("is-danger").addClass("is-success")
+        }
+        $.ajax({
+            type: "POST",
+            url: "/sign_up/save",
+            data: {
+                username_give: username,
+                password_give: password,
+                nick_give : nick
+            },
+            success: function (response) {
+                console.log(response)
+                alert("회원가입을 축하드립니다!")
+                window.location.replace("/")
+            }
+        });
+
+    }
+</script>
 </body>
 </html>
