--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 <head>
 
     <!-- Webpage Title -->
-    <title>Log In | SWEETER</title>
+    <title>Log In | 카페 for 개발자</title>
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -20,8 +20,10 @@
 
     <style>
         body {
-            background-color: RGBA(232, 52, 78, 0.2);
-            min-height: 100vh;
+            background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.3)), url("https://www.jeongdong.or.kr/static/portal/img/HKPU_04_04_pic1.jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
+            height: 1080px;
         }
 
         .section {
@@ -40,19 +42,19 @@
         }
 
         .is-sparta {
-            color: #e8344e !important;
+            color: darkgray;
         }
 
         .button.is-sparta {
             background-color: #e8344e;
             border-color: transparent;
-            color: #fff !important;
+            color: darkgray;
         }
 
         .button.is-sparta.is-outlined {
             background-color: transparent;
-            border-color: #e8344e;
-            color: #e8344e !important;
+            border-color: darkgray;
+            color: darkgray;
         }
 
         .help {
@@ -221,8 +223,8 @@
 <body>
 <section class="hero is-white">
     <div class="hero-body has-text-centered" style="padding-bottom:1rem;margin:auto;">
-        <h1 class="title is-sparta">SWEETER</h1>
-        <h3 class="subtitle is-sparta">세상을 달달</h3>
+        <h1 class="title is-sparta">카페 for 개발자</h1>
+        <h3 class="subtitle is-sparta">힐링공간</h3>
     </div>
 </section>
 <section class="section">
@@ -305,4 +307,3 @@
 </section>
 </body>
 </html>
-
