--- a/templates/index.html
+++ b/templates/index.html
@@ -1,31 +1,244 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
+<head>
+    <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
 
-        <!-- Webpage Title -->
-        <title>Home | SWEETER</title>
+    <title>Title</title>
+    <script>
+        $(document).ready(function () {
+            lasting();
+        });
 
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        function save_list() {
+            let name = $('#cafe-name').val()
+            let address = $('#address').val()
+            let comment = $('#comment').val()
+            let url = $('#url').val()
+            $.ajax({
+                type: "POST",
+                url: "/Gyeonggi",
+                data: {name_give : name, address_give : address, comment_give : comment, url_give : url},
+                success: function (response) {
+                    alert(response)
+                    window.location.reload()
+                    //let rows = response['Gyeonggi']
+                    //for (let i = 0; i < rows.length; i++) {
+                    //    let name = rows[i]['name']
+                    //    let score = rows[i]['score']
+                    //    let add = rows[i]['add']
+                    //    let comment = rows[i]['comment']
+                    //    let img = rows[i]['img']
 
-        <!-- Bulma CSS -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
-        <!-- Font Awesome CSS -->
-        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+                    //    let temp_html = `<div class="card">
+                    //                        <img src=${img}
+                    //                             class="card-img-top" alt="...">
+                    //                        <div class="card-body">
+                    //                            <h4 class="card-text">${name}</h4>
+                    //                            <p class="card-text">${add}</p>
+                    //                            <p class="card-text">${comment}</p>
+                    //                        </div>
+                     //                      </div>`
+                      //  $('#cards-box').append(temp_html)
 
-        <!-- JS -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+                   // }
+                }
+            })
+        }
 
+    </script>
 
-        <script>
-        </script>
+    <style>
+        .top-box {
+            width:100%;
+            height:500px;
+        }
+        .login-box{
+            padding: 20px;
+            width:100%;
+            height: 20px;
+        }
+        .login-box-inner{
+            width: 200px;
+            margin-top: 10px;
+            float: right;
+        }
+        .login-inner{
+            display: inline-block;
+            margin-right: 20px;
+            font-size: 20px;
+            color: black;
+        }
+        .banner-box{
+            width: 100%;
+            height: 400px;
+            background: bisque;
+            margin-top: 30px;
+        }
+        .banner-inner{
+            width: 100%;
+            height: 100%;
+            background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.3)), url('https://www.jeongdong.or.kr/static/portal/img/HKPU_04_04_pic1.jpg');
+            background-size: cover;
+            background-repeat: no-repeat;
+        }
+        .banner-write{
+            margin: 0 auto;
+            width: 200px;
+            height: 30px;
+            padding-top: 150px;
+        }
+        .banner-word{
+            color: white;
+            font-size: 30px;
+        }
+        .update-box{
+            width: 100%;
+            height: 50px;
+        }
+        .update-inner{
+            float: right;
+            width: 200px;
+            height: 100%;
+        }
+        .update-btn{
+            text-align: center;
+            font-size: 20px;
+            border: none;
+            border-radius: 10px;
+        }
 
-    </head>
-    <body>
-        <h1>
-            Hello world!
-        </h1>
-    </body>
+        .bottom-box{
+            width: 100%;
+            height: 1000px;
+            background-color: aliceblue;
+        }
+        .bottom-box-inner{
+            width: 100%;
+            height: 100%;
+            display: inline-block;
+            padding: 30px;
+            padding-left: 200px;
+        }
+        .card{
+            margin-left: 10px;
+        }
+        .modal-black{
+            width: 100%;
+            height: 100%;
+            background: rgba(0,0,0,0.5);
+            position: absolute;
+            z-index: 5;
+            display: none;
+        }
+        .modal-white{
+            width: 500px;
+            height: 550px;
+            background-color: thistle;
+            text-align: center;
+            margin: 0 auto;
+            margin-top: 200px;
+            border-radius: 30px;
+            padding: 20px;
+        }
+        .modal-white-inner{
+            width: 100%;
+            height: 100%;
+            background:thistle;
+        }
+        .cafe-name{
+            width: 100%;
+            height: 80px;
+        }
+        .modal-name{
+            margin-left: -220px;
+        }
+        .modal-input{
+            border-radius: 10px;
+            border: none;
+            height: 30px;
+            width: 300px;
+        }
+    </style>
+</head>
+<body>
+    <div class="modal-black">
+        <div class="modal-white">
+            <div class="modal-white-inner">
+            <div class="cafe-name">
+                <p class="modal-name">카페이름</p>
+                <input type="text" class="modal-input" id="cafe-name">
+            </div>
+            <div class="cafe-name">
+                <p class="modal-name">카페주소</p>
+                <input type="text" class="modal-input" id="address">
+            </div>
+            <div class="cafe-name">
+                <p class="modal-name">사진 URL</p>
+                <input type="text" class="modal-input" id="url">
+            </div>
+            <div class="cafe-name">
+                <p class="modal-name">코멘트</p>
+                <textarea id="comment" style="border: none; resize: none; width: 300px; height: 150px; border-radius: 10px"></textarea>
+            </div>
+            <div class="cafe-name">
+                <button style="margin-top: 120px; border: none; border-radius: 10px" onclick="save_list()">저장하기</button>
+            </div>
+            </div>
+        </div>
+    </div>
+    <div class="top-box">
+        <div class="login-box">
+            <div class="login-box-inner">
+                <div class="login-inner"><a href="/login" style="text-decoration: none">회원가입 및 로그인</a></div>
+
+            </div>
+        </div>
+        <div class="banner-box">
+            <div class="banner-inner">
+                <div class="banner-write"><p class="banner-word">카페 For 개발자</p></div>
+            </div>
+        </div>
+    </div>
+    <div class="update-box">
+        <div class="update-inner">
+            <button class="update-btn">카페 등록하기</button>
+        </div>
+    </div>
+    <div class="bottom-box">
+        <div class="bottom-box-inner">
+            <div class="row row-cols-1 row-cols-md-4 g-1" id="cards-box">
+                {% for cafe in caffe_list %}
+                <div class="card">
+                    <img src={{ cafe.img }}
+                         class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h4 class="card-text">{{ cafe.name }}</h4>
+                        <p class="card-text">{{ cafe.add }}</p>
+                        <p class="card-text">{{ cafe.comment }}</p>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+<script>
+    let update = document.querySelector('.update-btn')
+    let modal = document.querySelector('.modal-black')
+    update.addEventListener('click',function(){
+        modal.style.display = 'block'
+    })
+    modal.addEventListener('click',function(e){
+        if(e.target === e.currentTarget){
+            modal.style.display = 'none'
+        }
+    })
+
+</script>
+</body>
 </html>
