--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
 
-    <title>Title</title>
+    <title>Cafe for developer</title>
     <script>
         $(document).ready(function () {
 
@@ -28,26 +28,6 @@
                     alert(response)
                     console.log(response)
                     window.location.reload()
-                    //let rows = response['Gyeonggi']
-                    //for (let i = 0; i < rows.length; i++) {
-                    //    let name = rows[i]['name']
-                    //    let score = rows[i]['score']
-                    //    let add = rows[i]['add']
-                    //    let comment = rows[i]['comment']
-                    //    let img = rows[i]['img']
-
-                    //    let temp_html = `<div class="card">
-                    //                        <img src=${img}
-                    //                             class="card-img-top" alt="...">
-                    //                        <div class="card-body">
-                    //                            <h4 class="card-text">${name}</h4>
-                    //                            <p class="card-text">${add}</p>
-                    //                            <p class="card-text">${comment}</p>
-                    //                        </div>
-                     //                      </div>`
-                      //  $('#cards-box').append(temp_html)
-
-                   // }
                 }
             })
         }
